--- a/Belleza-Femenina-System/public/css/login/login.css
+++ b/Belleza-Femenina-System/public/css/login/login.css
@@ -17,14 +17,15 @@ body {
 }
 
 .loginContainer {
-    background-color: white;
+    background: #fff;
     border-radius: 15px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.08);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 1150px;   /* antes 950px */
     max-width: 100%;
-    min-height: 480px;
+    min-height: 650px;  /* antes 550px */
+    display: flex;
 }
 
 .formContainer {
