Actualizando estilos de unos botones

--- a/Belleza-Femenina-System/public/css/home/home.css
+++ b/Belleza-Femenina-System/public/css/home/home.css
@@ -251,3 +251,23 @@ h1, h2, h3, h4, h5 {
         min-height: 500px;
     }
 }
+
+
+.custom-btn {
+    background-color: transparent; 
+    border: 2px solid #f89fa1;   
+    color: #94654c;              
+    transition: all 0.3s ease; 
+    padding: 0.75rem 2rem;       
+    font-size: 1.2rem;           
+    border-radius: 12px;
+    line-height: 1;
+    text-decoration: none;
+}
+
+.custom-btn:hover {
+    background-color: #f89fa1;   
+    color: #ffffff;              
+    border-color: #f89fa1;        
+    text-decoration: none;
+}
